--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Lato', Arial, sans-serif;
     position: relative;
     min-height: 100%;
-    /*background-color: rgb(248,247,244); */
+    background-color: rgb(253,253,251);
 }
 
 #header {
