--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -2,45 +2,45 @@
     margin: 0 var(--gap) 0;
     padding-bottom: calc(var(--gap) *3);
     min-height: fit-content;
+    margin-top: 3em;
 }
+
 
 /* about presentation */
 
 #about-me { 
     margin: 3em auto 0;
+    width: 100%;
     padding: 1em;
-    margin: auto;
+    max-width: 1000px;
     display: flex;
     position: relative;
-    background-color: aliceblue;
-    display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: var(--gap);box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+    border-bottom: 3px solid gray;
 }
 
-#about-me h1 {
+#about-introduction h1 {
     font-size: var(--title-font-size );
     letter-spacing: .015em;
     line-height: 1.2em;
     margin-bottom: 0.5em;
     z-index: 50;
+    border-left: 50px solid black;
+    padding-left: 1em;
 }
 
-#about-me p {
+#about-introduction p {
     opacity: var(--opacity);
     font-size: 1em;
     margin: 0;
     z-index: 50;
+    line-height: 1.3em;
+    letter-spacing: 0.2em;
 }
 
 #about-introduction {
-    padding-left: var(--gap);
-    align-self: center;
-    line-height: 1.3em;
-    letter-spacing: 0.1em;
-    padding: 2em;
-    z-index: 30;
+    padding: 2em 0;
 }
 
 /* Project + arrow direction */
@@ -49,9 +49,6 @@
     margin: auto;
     position: relative;
     text-align: center;
-    margin-top: 3em;
-    margin-bottom: 1em;
-    padding: 2em;
 }
 
 #text-line {
@@ -74,7 +71,6 @@
 #container-parallax {        
     height: 15em;
     align-self: center;
-    margin-top: 5em;
 }
 
 #parallax1 {
@@ -186,40 +182,46 @@
 }
 
 @media screen and (min-width: 594px) {
+    .square-div {
+        height: 20em;
+    }
+
     #container-parallax {
-        width: calc(100% + 4em);
+        width: 100%;
+        max-width: 900px;
     }
 
     #parallax-img {
-        width: 800px
+        width: 110%;
     }
 
-    .square-div {
-        height: 20em;
+    #about-me {
+        margin-top: 0;
+    }
+
+    #about-introduction {
+        margin-top: var(--gap);
+    }
+
+    #about-introduction h1{
+        font-size: 3em;
+    }
+
+    #about-introduction p{
+        font-size: 1.2em;
     }
 }
 
 
 
 @media screen and (min-width: 990px) { 
-    .square-div {
-        height: 5em;
-    }
-
-    #parallax-img {
-        width: 550px;
-    }
-
-    #about-me { 
-        width: 300px;
-    }
-    
-    #about-introduction {
-        width: 200px;
-    }
     
     #projects-container {    
         min-height: calc((55vw + 40vh));
+    }
+
+    #about-introduction p{
+        font-size: 2em;
     }
 
 }
