--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -1,19 +1,19 @@
 :root {
     --opacity: 0.6;
-    --font-size: 1.1em;
+    --font-size: 0.8em;
+    --font-size-subtitle: 1em;
     --font-size-details: 0.8em;
     --title-font-size: 2em;
     --large-gap: 7em;
     --gap: 2em;
     --secondary-color: rgb(147,112,219);
     --margin-top: 0em;
-    --background-color: rgb(238,238,238);
 }
 
 @media screen and (min-width: 700px) {   
     :root {
-        --font-size : 1.3em;
-        --font-size-details : 0.8em;
+        --font-size: 1em;
+        --font-size-subtitle : 1.2em;
         --title-font-size : 2em;
         --gap: 3em;
         --margin-top: 2em;
@@ -22,9 +22,8 @@
 
 @media screen and (min-width: 990px) {   
     :root {
-        --font-size : 1.5em;
-        --font-size-details : 0.8em;
-        --title-font-size : 2.5em;
+        --font-size-subtitle : 1.5em;
+        --title-font-size : 3em;
         --gap: 3em;
         --margin-top: 5em;
     }
@@ -57,6 +56,87 @@
     bottom: 0;
 }
 
+/* button style */
+.effect-button {
+    text-decoration: none;    
+    font-size: 1em;
+    font-weight: lighter;
+    padding: 1em;  
+    position: relative;
+    text-transform: uppercase;
+    font-size: 1em;
+    letter-spacing: 0.2em;
+    cursor: pointer;
+  }
+  
+  .effect-button .animation-button {
+    background: #222;
+    height: 2px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -1px;
+    z-index: -1;
+  
+    -webkit-transition: all 0.3s;
+  
+    -o-transition: all 0.3s;
+  
+    transition: all 0.3s;
+  }
+  
+  .effect-button:hover {
+    padding-right: 20px;
+    color: #fff !important;
+    padding-left: 20px;
+  }
+  
+  .effect-button:hover .animation-button {
+    height: 100%;
+    width: 100%;
+    -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+  }
+  
+  .effect-button .animation-button:before, .effect-button .animation-button:after {
+    content: '';
+    height: 2px;
+    width: 10px;
+    background: #222;
+    position: absolute;
+    right: -2px;      
+    -webkit-transition: all 0.3s;      
+    -o-transition: all 0.3s;      
+    transition: all 0.3s;
+  }
+  
+  .effect-button .animation-button:before {
+    bottom: 3px;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  .effect-button .animation-button:after{
+    top: 3px;
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  
+  .effect-button:hover .animation-button:before,
+  .effect-button:hover .animation-button:after{
+    right: 0;
+  }
+  
+  .effect-button:hover .animation-button:before{
+    bottom: 6px;
+  }
+  
+  .effect-button:hover .animation-button:after{
+    top: 6px;
+  }
+
 /* reset */
 
 ul {
@@ -65,7 +145,8 @@ ul {
     padding: 0;
 }
 
-p, h1, h2, h3, div {
+p, h1, h2, h3, div, div {
     margin: 0;
+    padding: 0;
     font-weight: normal;
 }
