--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -72,7 +72,7 @@
 }
 
 
-span {
+.round span {
     z-index: 999;
     height: 3px;
     margin:1px;
@@ -81,7 +81,7 @@ span {
     transition: 0.4s ease;
 }
 
-span:first-child {
+.round span:first-child {
     display: block;
     position: absolute;
     transform: rotate(45deg);
@@ -89,7 +89,7 @@ span:first-child {
     bottom: 0;
 }
 
-span:nth-child(2) {
+.round span:nth-child(2) {
     display: block;
     position: absolute;
     transform: rotate(-45deg);
@@ -97,7 +97,7 @@ span:nth-child(2) {
     bottom: 0;
 }
 
-span:nth-child(3) {
+.round span:nth-child(3) {
     display: block;
     position: absolute;
     transform: rotate(45deg);
@@ -105,7 +105,7 @@ span:nth-child(3) {
     bottom: 20%;
 }
 
-span:nth-child(4) {
+.round span:nth-child(4) {
     display: block;
     position: absolute;
     transform: rotate(-45deg);
