--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,21 +1,23 @@
 .project {
-    padding-bottom: calc(var(--gap) *3);
-    margin: var(--margin-top) var(--gap) 0;
+    margin: 0 var(--gap);
+    margin-bottom: 6em;
 }
 
 .project__header {
-    text-align: center;
-    background-color: var(--background-color);
+    text-align: right;
     padding: var(--gap) 1em;
+    border-bottom: 1px solid gray;
 }
 
 .project h1 {    
     font-size: var(--title-font-size );
     text-transform: uppercase;
+    letter-spacing: 0.1em;
+    margin-bottom: 0.5em;
 }
 
 .project h3 {    
-    font-size: var(--font-size );
+    font-size: 1.2em;
     opacity: var(--opacity );
 }
 
@@ -33,8 +35,10 @@
 }
 
 .project__description{    
-    font-size: 1em;
-    margin: 0
+    font-size: var(--font-size);
+    margin: 0;
+    line-height: 1.5em;
+
 }
 
 .project__technologies {
@@ -56,12 +60,6 @@
     margin-bottom: 0;
 }
 
-.project a {    
-    font-size: 1.5em !important;
-    text-align: right;
-    margin-right: 0.5em;
-}
-
 .project__top {    
     font-size: 1em;
     line-height: 1.6em;
@@ -75,34 +73,25 @@
     margin: 1em auto;
     letter-spacing: .05em;
     text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.project__links a{    
-    background-color: white;
-    color: black;
-    font-size: 1.2em !important;
-    margin: 1em 0;
-    border: 1px solid #000;
-    padding: 0.3em 1em;
+.project-button {
+    color: black !important;
+
 }
 
-.project__links a:hover{    
-    font-size: 1.2em !important;
-    margin: 1em 0;
-    border: 1px solid #000;
-    padding: 0.3em 1em;
-    background-color: black;
-    border-color: white;
-    color: white;
+.project__subcontainer {
+    display: flex;    
 }
 
-.project__links a::after{    
-    display: none !important;
+.project__left {
+    padding-right: var(--gap);
 }
 
-
-@media screen and (min-width: 700px) {
-    .project {
-        padding-top: 3em;
-    }
+.project__right {
+    padding-left: var(--gap);
 }
+
