--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -43,21 +43,42 @@
 
 .project__technologies {
     display: flex;
-    justify-content: center;
-    max-width: 640px;
-    margin: 1em auto;
 }
 
 .project__technologies li::marker {
     display: none;
 }
 
-.project__technologies li {    
-    margin: 1em;
+#technologies-list-container {
+    margin-top: 2em;
+}
+
+.project__technologies li {  
     font-size: var(--font-size-details);
     letter-spacing: .05em;
     text-transform: uppercase;
     margin-bottom: 0;
+    letter-spacing: 0.1em;
+}
+
+.project__technologies li:not(:last-child) {
+    margin-right: 1em;
+}
+
+.project__left h2 {
+    font-size: 1.2em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+}
+
+.project__left p {
+    font-size: 1em;
+    font-weight:lighter;
+    opacity: var(--opacity);
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
 }
 
 .project__top {    
@@ -70,7 +91,7 @@
 
 .project__links {    
     text-align: center;
-    margin: 1em auto;
+    margin: 3em auto 0;
     letter-spacing: .05em;
     text-transform: uppercase;
     display: flex;
@@ -84,14 +105,28 @@
 }
 
 .project__subcontainer {
-    display: flex;    
+    display: flex; 
+    flex-direction: column;  
+    border-top: 1px solid gray;
+    padding-top: 3em; 
 }
 
 .project__left {
     padding-right: var(--gap);
+    width: 700px;
+    margin-bottom: var(--gap);
 }
 
-.project__right {
-    padding-left: var(--gap);
+@media screen and (min-width: 500px){
+
+    .project__left {
+        margin-bottom: 0;
+    }
+
+    .project__subcontainer {
+        flex-direction: row;  
+    }
+
 }
+
 
