--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -9,9 +9,8 @@
 /* about presentation */
 
 #about-me { 
-    margin: 3em auto 0;
-    padding: 1em;
-    max-width: 1000px;
+    margin: 3em 0 3em;
+    max-width: 500px;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -40,6 +39,7 @@
 
 #about-introduction {
     padding: 2em 0;
+    max-width: 500px;
 }
 
 /* Project + arrow direction */
@@ -180,14 +180,18 @@
     }
 }
 
-@media screen and (min-width: 594px) {
+@media screen and (min-width: 500px) {
     .square-div {
         height: 20em;
     }
 
+    #about-me {
+        margin: 3em auto;
+        max-width: 100%;
+    }
+
     #container-parallax {
         width: 100%;
-        max-width: 900px;
     }
 
     #parallax-img {
@@ -196,6 +200,7 @@
 
     #about-introduction {
         margin-top: var(--gap);
+        max-width: 100%;
     }
 }
 
@@ -205,6 +210,25 @@
     
     #projects-container {    
         min-height: calc((55vw + 40vh));
+    }
+
+    #about-introduction,
+    #about-me {
+        margin: var(--gap) 0 0 var(--gap);
+        width: 35%;
+    }
+}
+
+
+@media screen and (min-width: 990px) and (max-width: 1430px ) { 
+    #parallax-img {
+        width: 200%;
+    }
+
+    #about-introduction,
+    #about-me {
+        margin: var(--gap) 0 0 var(--gap);
+        width: 45%;
     }
 }
 
