--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,14 +1,14 @@
 #about-container {
-    margin: 0 var(--gap);
+    margin: 1em var(--gap) 0;
     position: relative;
 }
 
-#render-template {
-    min-height: 692px;    
+#render-template {  
     position: relative;
     display: flex;    
     align-items: center;
     justify-content: center;
+    margin-bottom: 3em;
 
 }
 
@@ -103,7 +103,6 @@
 }
 
 #journey {
-    margin-top: var(--gap);
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
@@ -173,7 +172,6 @@
 /* Skills Template */
 
 #skills {    
-    margin-top: var(--gap);
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-around;
@@ -206,6 +204,7 @@
 
 
 @media screen and (min-width: 600px) and (max-width: 990px) {
+
     #journey,
     #skills {
         flex-direction: row-reverse;        
@@ -242,11 +241,15 @@
     }
 }
 
+@media screen and (min-width: 700px) {   
+    #about-container {
+        margin-top: 10em;
+    }
+}
 
 
 
-@media screen and (min-width: 990px) {   
-    
+@media screen and (min-width: 990px) { 
     #journey,
     #skills {
         flex-direction: row-reverse;        
@@ -296,31 +299,5 @@
     #random-skills-container h2 {
         color: black;
     }
-}
-
-
-@-webkit-keyframes animation-button-slide {
-    from { transform: translate(-100%, 100%); }
-    to { transform: translate(0%, 0%); }
-}
-
-
-#whale-image {
-    height: 25em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-#whale-container {
-    width: 25em;
-    border-radius: 50%;
-    height: 25em;
-    background-size: contain;
-    background-repeat: repeat;
-    animation: animation-button-slide 3s linear;
-    position: absolute;
-    bottom: 0;
-    left: -100px;
 }
 
